# smart-bench

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  README.md  bench_erc20.csv  bench_flipper.csv  bench_storage-read.csv  bench_storage-write.csv  bench_triangle-number.csv  benchmark-results.csv
.github/actions/get-contract-language/: action.yml
.github/workflows/: benchmark.yml  build-publish-docker-image.yml  ci.yaml
contracts/: computation.contract  erc1155.contract  erc20.contract  erc721.contract  flipper.contract  incrementer.contract  storage.contract
contracts/computation/: Cargo.toml  lib.rs
contracts/ink/: computation.contract  erc1155.contract  erc20.contract  erc721.contract  flipper.contract  incrementer.contract  storage.contract
contracts/ink/computation/: Cargo.toml  lib.rs
contracts/ink/storage/: Cargo.toml  lib.rs
contracts/solidity/: ERC20.sol  flipper.sol  flipper_meta.json  hardhat.config.js  incrementer.sol  incrementer_meta.json  openzeppelin_solang.patch  package.json  secrets.json
contracts/solidity/contracts/: BenchERC1155.sol  BenchERC20.sol  BenchERC721.sol  Computation.sol  ERC20.sol  Storage.sol  flipper.sol  incrementer.sol
contracts/solidity/evm/contracts/BenchERC1155.sol/: BenchERC1155.json
contracts/solidity/evm/contracts/BenchERC20.sol/: BenchERC20.json
contracts/solidity/evm/contracts/BenchERC721.sol/: BenchERC721.json
contracts/solidity/evm/contracts/Computation.sol/: Computation.dbg.json  Computation.json
contracts/solidity/evm/contracts/Storage.sol/: Storage.json
contracts/solidity/evm/contracts/flipper.sol/: flipper.json
contracts/solidity/evm/contracts/incrementer.sol/: incrementer.json
contracts/solidity/scripts/: deploy.js
contracts/solidity/wasm/: BenchERC1155.contract  BenchERC20.contract  BenchERC721.contract  Computation.contract  Storage.contract  flipper.contract  incrementer.contract
contracts/storage/: Cargo.toml  lib.rs
launch/: .gitignore  Makefile  README.md  build.sh  canvas-local.json  contracts-rococo-local.json  download-bins.sh  entrypoint.sh  eth_addr_generator.py  moonbase-local.json  moonbeam.patch  requirements.txt  run.sh  smart_bench.Dockerfile  smart_bench.Dockerfile.dockerignore  substrate_addr_generator.py
launch/configs/: funded-accounts-evm.json  funded-accounts-wasm.json  network_native_ink.toml  network_native_moonbeam.json  network_native_moonbeam.toml  network_native_wasm.json
macro/: Cargo.toml
macro/src/: lib.rs
metadata/: canvas.scale  contracts-node.scale  moonbeam.scale
scripts/ci/: build-contract.sh
scripts/ts/: .gitignore  moonbeam.ts  package.json  tsconfig.json
src/: blocks.rs  canvas.rs  contracts.rs  exec.rs  integration_tests.rs  main.rs  moonbeam.rs  runner.rs  stats.rs
src/canvas/: mod.rs  runner.rs  xts.rs
src/contracts/: erc20.rs
src/evm/: mod.rs  runner.rs  xts.rs
src/moonbeam/: account.rs  mod.rs  runner.rs  transaction.rs  xts.rs
src/wasm/: mod.rs  runner.rs  xts.rs
stats/: .env  README.md  csv_to_line_proto.sh  docker-compose.yml  get_graph.sh  smart_bench_to_csv.sh
stats/grafana-provisioning/dashboards/: dashboard.yml  tps.json
stats/grafana-provisioning/datasources/: datasource.yml
v1.0.0/: bench_erc20.csv  bench_flipper.csv  bench_storage-read.csv  bench_storage-write.csv  bench_triangle-number.csv
v1.7.0/: bench_erc20.csv  bench_flipper.csv  bench_storage-read.csv  bench_storage-write.csv  bench_triangle-number.csv
