[workspace]
members = [".", "macro"]

[package]
name = "smart-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
smart-bench-macro = { version = "0.1.0", path = "./macro" }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
color-eyre = "0.6.0"
codec = { package = "parity-scale-codec", version = "3", default-features = false }
contract-metadata = { package = "contract-metadata", git = "https://github.com/paritytech/cargo-contract", branch = "master" }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = "1.0.79"
clap = { version = "3.1.6", features = ["derive"] }
subxt = { git =  "https://github.com/paritytech/subxt", package = "subxt", branch = "master" }
futures = "0.3.21"
parity-wasm = "0.42.2"
povstats = { git = "https://github.com/athei/povstats", branch = "master" }
jsonrpsee = { version = "0.9.0", features = ["ws-client"] }
pallet-contracts-primitives = "6.0.0"

# ethereum
sha3 = "0.10.1"
libsecp256k1 = { version = "0.6", default-features = false, features = [ "hmac" ] }
ethabi = "17.0.0"

# substrate
sp-core = "6.0.0"
sp-keyring = "6.0.0"
sp-runtime = "6.0.0"
sp-io = "6.0.0"
