[workspace]
members = [".", "macro"]

[package]
name = "smart-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
smart-bench-macro = { version = "0.1.0", path = "./macro" }
tokio = { version = "1.20.4", features = ["rt-multi-thread"] }
color-eyre = "0.6.1"
codec = { package = "parity-scale-codec", version = "3.4", default-features = false }
contract-metadata = "3.2.0"
impl-serde = { version = "0.4.0", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1.0.81"
clap = { version = "3.1.17", features = ["derive"] }
subxt = { version = "0.33", features = ["substrate-compat"] }
futures = "0.3.21"
parity-wasm = "0.45"
blockstats = { git = "https://github.com/paritytech/blockstats", branch = "master" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
primitive-types = { version = "0.12.1", features = ["fp-conversion"] }

# ethereum
sha3 = "0.10.8"
libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ] }
web3 = { git = "https://github.com/tomusdrw/rust-web3", version = "0.20.0", features = ["signing"], rev = "65c9d0c4" }
rlp = "0.5.2"
secp256k1 = { version = "0.27.0", features = ["recovery"] }

# Substrate
pallet-contracts-primitives = "29.0.0"
sp-core = "26.0.0"
sp-weights = "25.0.0"
sp-runtime = "29.0.0"
sp-keyring = "29.0.0"


[dev-dependencies]
serial_test = "2.0.0"
assert_cmd = "2.0.11"
regex = "1.7.3"
tempfile = "3.5.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
anyhow = "1.0.70"

[features]
default = ["integration-tests"]

integration-tests = []
