[package]
name = "smart-bench-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
subxt-codegen = "0.28.0"
ink_metadata = "3.0.0-rc8"
contract-metadata = "1"
proc-macro2 = "1.0.56"
proc-macro-error = { version = "1.0.4", default-features = false }
serde = "1.0.137"
serde_json = "1.0.81"
syn = "1.0.86"
quote = "1.0.15"
